# BentoCrewAI

./: .gitignore  README.md  pyproject.toml
src/: bentofile.yaml  requirements.txt
src/bento_crew_demo/: crew.py  main.py  service.py
src/bento_crew_demo/config/: agents.yaml
